@@ -1,5 +1,0 @@
-ROUNDCUBE_VERSION =
-ROUNDCUBE_CONF_DIR = tools/webmail/config
-DATABASE_USER =
-DATABASE_PASSWORD =
-DES_KEY =
